# PyTorch-BigGraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ifbpy.py  requirements.txt  setup.cfg  setup.py  update_plan.txt
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/source/: batch_preparation.rst  conf.py  configuration_file.rst  data_model.rst  distributed_training.rst  downstream_tasks.rst  dynamic_relations.rst  evaluation.rst  faq_troubleshooting.rst  featurized_entities.rst  index.rst  input_output.rst  loss_optimization.rst  pretrained_embeddings.rst  related.rst  scoring.rst
examples/: LICENSE  fb15k.py  filtered_eval.py  livejournal.py
examples/configs/: fb15k_config.py  livejournal_config.py
test/: test_batching.py  test_bucket_scheduling.py  test_checkpoint_manager.py  test_checkpoint_storage.py  test_distributed.py  test_edgelist.py  test_entitylist.py  test_fileio.py  test_functional.py  test_graph_storages.py  test_losses.py  test_model.py  test_optimizers.py  test_schema.py  test_stats.py  test_storage_manager.py  test_train.py  test_util.py
test/resources/: edges_0_0.h5
tests/: batching_tests.py  bucket_scheduling_tests.py  distributed_tests.py  edgelist_tests.py  fileio_tests.py  functional_tests.py  model_tests.py  schema_tests.py  stats_tests.py  util_tests.py
torch_extensions/: README.md  __init__.py
torch_extensions/tensorlist/: tensorlist.py
torchbiggraph/: VERSION.txt  __init__.py  async_adagrad.py  batching.py  bucket_scheduling.py  check.py  checkpoint_enlarge.py  checkpoint_manager.py  checkpoint_storage.py  config.py  distributed.py  edgelist.py  edgelist_reader.py  entity_count_reader.py  entitylist.py  eval.py  fileio.py  filtered_eval.py  graph_storages.py  lockserver.py  losses.py  model.py  operators.py  parameter_sharing.py  parameterserver.py  partitionserver.py  plugin.py  regularizers.py  row_adagrad.py  rpc.py  schema.py  stats.py  storage_repository.py  tensorlist.py  train.py  train_cpu.py  train_gpu.py  types.py  util.cpp  util.py
torchbiggraph/contrib/: data_processor.py  dictionary.py  filtered_eval.py  torchbiggraph_to_tsv.py
torchbiggraph/converters/: data_processor.py  dictionary.py  export_to_tsv.py  import_from_parquet.py  import_from_tsv.py  importers.py  torchbiggraph_to_tsv.py  utils.py
torchbiggraph/examples/: fb15k.py  livejournal.py
torchbiggraph/examples/e2e/: README.md  (+2 more)
(+13 files in other folders)
