[metadata]
name = torchbiggraph
version = file: torchbiggraph/VERSION.txt
url = https://github.com/facebookresearch/PyTorch-BigGraph
project_urls =
    Source = https://github.com/facebookresearch/PyTorch-BigGraph
    Bug Reports = https://github.com/facebookresearch/PyTorch-BigGraph/issues
    Documentation = https://torchbiggraph.readthedocs.io/
author = Facebook AI Research
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
# Already provided as a classifier.
# license = BSD License
license_files =
    LICENSE.txt
    torchbiggraph/examples/LICENSE.txt
description = A distributed system to learn embeddings of large graphs
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    machine-learning
    knowledge-base
    graph-embedding
    link-prediction
test_suite = test

[options]
setup_requires =
    setuptools >= 39.2
install_requires =
    attrs >= 18.2
    h5py >= 2.8
    numpy
    setuptools
    torch >= 1
    tqdm
python_requires = >=3.6, <4
packages = find:

[options.extras_require]
docs = Sphinx
parquet = parquet

[options.entry_points]
console_scripts =
    torchbiggraph_config = torchbiggraph.config:main
    torchbiggraph_eval = torchbiggraph.eval:main
    torchbiggraph_example_fb15k = torchbiggraph.examples.fb15k:main
    torchbiggraph_example_livejournal = torchbiggraph.examples.livejournal:main
    torchbiggraph_export_to_tsv = torchbiggraph.converters.export_to_tsv:main
    torchbiggraph_import_from_tsv = torchbiggraph.converters.import_from_tsv:main
    torchbiggraph_partitionserver = torchbiggraph.partitionserver:main
    torchbiggraph_train = torchbiggraph.train:main
    torchbiggraph_import_from_parquet = torchbiggraph.converters.import_from_parquet:main [parquet]


[options.packages.find]
exclude =
    docs
    test

[options.package_data]
torchbiggraph =
    VERSION.txt
torchbiggraph.examples =
    configs/*.py
